# CinemaReservations

./: .coverage  .gitignore  README.md  cinema.db  pyproject.toml  pytest.ini  requirements.txt  test_output.txt
app/: __init__.py  main.py
app/core/: config.py  deps.py  security.py
app/db/: init_db.py
app/models/: cinema.py  favorite.py  reservation.py  review.py  user.py
app/routers/: admin.py  admin_tools.py  auth.py  availability.py  cinema.py  favorites.py  provider_reservations.py  reservations.py  reviews.py  users.py
app/schemas/: auth.py  cinema.py  favorite.py  reservation.py  review.py  user.py
app/services/: reservation_service.py
tests/: conftest.py  test_admin.py  test_auth.py  test_cinema_crud.py  test_provider_admin_actions.py  test_reservation_basic.py  test_reservations.py  test_reservations_flow.py
